@@ -744,7 +744,7 @@ bool FCEUSS_Load(const char *fname)
 		}
 		else
 		{
-			//This looks redudant to me... but why bother deleting it:)
+			//This looks redudant to me... but why bother deleting it:) //adelikat: TODO: remove this later
 			SaveStateStatus[CurrentState]=1;
 
 			FCEU_DispMessage("State %d loaded.",CurrentState);
@@ -775,6 +775,12 @@ bool FCEUSS_Load(const char *fname)
 #ifdef WIN32
 	Update_RAM_Search(); // Update_RAM_Watch() is also called.
 #endif
+		
+		//Update input display if movie is loaded
+		extern uint32 cur_input_display;
+		if (FCEUMOV_Mode(MOVIEMODE_RECORD) ) //TODO: the memcpy line doesn't work if playback mode, figure out why and have it up date during that mode as well
+			memcpy(&cur_input_display,currMovieData.records[currMovieData.getNumRecords()-1].joysticks.data,4);
+
 		return true;
 	}
 	else
